# streamlit-styled

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  style.css
